# grasp

./: .gitignore  CMakeLists.txt  baseline_trial.rest.yml  orange_box.rest.yml  run_manipulation_experiments.sh  run_manipulation_experiments_multiple.sh  test_trial.rest.yml
cfg/: robots.yml
data/recorded_grasps/: baseline_trial.rest.yml  hand.rest.yml  object_size_extrapolation_trial.rest.yml  red_box_large_side_trial.rest.yml  red_box_trial.rest.yml  red_large_trial.rest.yml  trial.rest.yml  trial1.rest.yml  yellow_small_side_lat_trial.rest.yml  yellow_small_side_trial.rest.yml
examples/: CMakeLists.txt  README.md  baseline.cpp  baseline.hpp  contacts_example.cc  contacts_example.hh  hand_remote.cc  hand_remote.hh  hand_signs.cc  hand_signs.hh  manipulation.cpp  manipulation.hpp  multiple_models.cc  multiple_models.hh  read_grasps.cc  read_grasps.hh  read_trajectory.cc  read_trajectory.hh  record_poses.cc  record_poses.hh  run_grasps.cc  run_grasps.hh  run_grasps_for_size_interpolation.cc  run_grasps_for_size_interpolation.hh  target_example.cc  target_example.hh  video_record_trajectories.cpp
models/: shadowhand.urdf
msgs/: hand.proto
plugins/: HandPlugin.cc  HandPlugin.hh  TargetPlugin.cc
utils/: Interface.cc  Interface.hh
worlds/: empty.world  my_empty.world  my_world.world  object.world
